[package]
name = "nulctl"
version = "0.5.4"
edition = "2024"

[lib]
name = "nulctl"
path = "src/lib.rs"

[[bin]]
name = "nulctl"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "macros", "net", "process", "io-util", "time"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
uuid = { version = "1.23.1", features = ["v4"] }
colored = "3.1.1"
sysinfo = "0.39.1"
ed25519-dalek = "2.2.0"
getrandom = "0.4.2"
hex = "0.4.3"
ratatui = "0.30.0"
crossterm = "0.29.0"
